--- a/GeekNewsDemo/app/src/main/res/values/colors.xml
+++ b/GeekNewsDemo/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="topic_text">#afafaf</color>
     <color name="toast_bg">#dddfe0</color>
+    <color name="colorBackground">#EEEEEE</color>
 </resources>
