--- a/GeekNewsDemo/app/src/main/res/values/colors.xml
+++ b/GeekNewsDemo/app/src/main/res/values/colors.xml
@@ -6,4 +6,7 @@
     <color name="topic_text">#afafaf</color>
     <color name="toast_bg">#dddfe0</color>
     <color name="colorBackground">#EEEEEE</color>
+    <color name="drawer_item_bg_n">#fffff9</color>
+    <color name="drawer_header_text">#2c2c2c</color>
+    <color name="drawer_item_bg_p">#e8e8e8</color>
 </resources>
