--- a/GeekNewsDemo/app/src/main/res/values/dimens.xml
+++ b/GeekNewsDemo/app/src/main/res/values/dimens.xml
@@ -3,4 +3,7 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="content_padding">8dp</dimen>
+    <dimen name="drawer_image_height">180dp</dimen>
+    <dimen name="detail_image_height">260dp</dimen>
+    <dimen name="detail_bottom_height">56dp</dimen>
 </resources>
