--- a/GeekNewsDemo/app/src/main/res/values/colors.xml
+++ b/GeekNewsDemo/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="drawer_item_bg_n">#fffff9</color>
     <color name="drawer_header_text">#2c2c2c</color>
     <color name="drawer_item_bg_p">#e8e8e8</color>
+    <color name="fab_bg">#FF4081</color>
+
 </resources>
